11.8.1 (21-05-2024)
- Bug Fix: Validate if there active customers with same fiscal number, only for active customers in Customer#checkRules [#qubIT-Fenix-5307]

11.8.0 (13-05-2024)
- Refactor: Debit note receive finantial entity and payor debt account [#qubIT-Fenix-4587]
- Refactor: Use ISibsPaymentCodePoolService#getDefaultDigitalPaymentPlatform method, to get default payment code pool for finantial entity [#qubIT-Fenix-4587]
- Refactor: Associate FinantialEntity to AcademicTreasuryEvent [#qubIT-Fenix-4587]
- Bug Fix: Create sibs payment request for ReservationTaxEventTarget, by finantial entity [#qubIT-Fenix-4587]
- Refactor: In method AcademicTariff#createDebitEntryForImprovement, do not create debit note. Instead create in AcademicTaxServices#createImprovementTax [#qubIT-Fenix-4587]

11.7.0 (02-05-2024)
- Refactor: Bring to PersonCustomer#getAllPendingInvoiceEntriesForPerson, the logic from module qubedu.module.academic-treasury-ui [#qubIT-Fenix-5207]
- Bug Fix: Fill the property DebtReportEntryBean#netExemptedAmount for credit entries also [#qubIT-Fenix-5223]
- Bug Fix: Declare two additional properties in DebtReportEntryBean and SettlementReportEntryBean, to present associated exemptions in different repor columns [#qubIT-Fenix-5223]

11.6.0 (19-04-2024)
- Refactor: Refactors code to isolate qub-docs dependency [#qubIT-Fenix-5085]

11.5.1 (16-04-2024)
- Bug Fix: Remove the logic of academic service request debt annulment, if before and after price amounts are different [#UL-FD-2063]

11.5.0 (15-04-2024)
- Refactor: Change invocation to create credit entries due to support for credit over exemptions [#qubIT-Fenix-5102]

11.4.2 (26-02-2024)
- Bug Fix: Remove atomic annotation in AcademicTreasuryEvent#getTreasuryEventDate method, which should be readonly [#ISCTE-FENIXEDU-419]

11.4.1 (01-02-2024)
- Improvement: Print credit entry academic information, if it is associated with treasury event [#qubIT-Fenix-4928]

11.4.0 (31-01-2024)